fix black font on mobile

--- a/components/addFilm/addFilm.module.css
+++ b/components/addFilm/addFilm.module.css
@@ -65,6 +65,7 @@
     border: solid white 0.1px;
     border-radius: 5px;
     padding: 3px;
+    color: white;
 }
 
 .addMobile label {
